# SecretNumber

./: Untitled Diagram.drawio
server/: server.js
solanaProgram/: Cargo.toml
solanaProgram/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
webClient/: client.js  index.html  package.json
