[package]
name = "escrow-game"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.11"
arrayref = "0.3.6"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]



